cmake_minimum_required(VERSION 3.16)
project(ChatServer VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(hello 
  src/main.cpp
  src/server.cpp
  src/clienthandler.cpp
  src/connectionhandler.cpp
)

target_include_directories(hello
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include
)
